Changed to enable charset conversion error alert only for "send now" to avoid the data loss when called for window close, bug 57083, r=ducarroz, sr=bienvenu.