mailnews/compose/src/nsMsgCompUtils.cpp
@@ -642,7 +642,8 @@ mime_generate_headers (nsMsgCompFields *fields,
     // alert the user if the subject contains characters out of charset range (e.g. multilingual data)
     nsAutoString u; // need to convert from UTF-8 to UCS2
     if (NS_OK == nsMsgI18NConvertToUnicode(nsCAutoString(msgCompHeaderInternalCharset()), nsCAutoString(pSubject), u) &&
-        !nsMsgI18Ncheck_data_in_charset_range(charset, u)) {
+        !nsMsgI18Ncheck_data_in_charset_range(charset, u) &&
+        nsIMsgSend::nsMsgDeliverNow == deliver_mode) {
       PRBool proceedTheSend;
       rv = nsMsgAskBooleanQuestionByID(aPrompt, NS_MSG_MULTILINGUAL_SEND, &proceedTheSend);
       if (!proceedTheSend) {
